# LinuxCnc_PokeysLibComp

./: .clang-format  .gitignore  .gitmodules  BuildLinuxCnc.sh  CMakeLists.txt  CODE_REVIEW_GUIDELINES.md  CONTRIBUTING.md  Complete__Implementation__Summary_8md.html  Copy2SourceTree.sh  Dockerfile  Failsafe__commands_8md.html  Final__Implementation__Status_8md.html  HAL-Interface_8md.html  HAL_PoKeys.h  HAL__Naming__Convention__Analysis_8md.html  Home_8md.html  INDEX_8md.html  INTERFACE__PARITY__ANALYSIS_8md.html  IO__Async__Implementation__Analysis_8md.html  LinuxCNC__Integration__Testing_8md.html  Makefile.noqmake.rt  MatrixKeyboard__commands_8md.html  MatrixLED__commands_8md.html  Missing__RT__Functions__Analysis_8md.html  Phase4__Testing__Optimization_8md.html  PoKeysCompEncoders_8c.html  PoKeysCompEncoders_8c.js  PoKeysCompEncoders_8c__dep__incl.map  PoKeysCompEncoders_8c__dep__incl.md5  PoKeysCompEncoders_8c__incl.map  PoKeysCompEncoders_8c__incl.md5  PoKeysCompEncoders_8c_source.html  PoKeysCompIO_8c.html  PoKeysCompIO_8c.js  PoKeysCompIO_8c__dep__incl.map  PoKeysCompIO_8c__dep__incl.md5  PoKeysCompIO_8c__incl.map  PoKeysCompIO_8c__incl.md5  PoKeysCompIO_8c_source.html  PoKeysCompPoExtBus_8c.html  (+7369 more)
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SPONSORS.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: Clang.yml  ci.yml  code2flow.yml  codeql-analysis.yml  doxygen.yml  release.yml
5axismaker_config/: 5axismaker.hal  5axismaker.ini
DM542_XXYZ_mill/: LinuxCNCStepgen_DM542A_StepperClalc.xlsx  Pokeys57CNC_DM542_XXYZ_homingdeb.ini  Pokeys57CNC_DM542_XXYZ_mill.hal  Pokeys57CNC_DM542_XXYZ_mill.ini  Pokeys57CNC_DM542_XXYZ_mill.md  Pokeys57CNC_debug_empty.hal  Pokeys57CNC_debug_empty.ini  Pokeys57E_DM542_XXYZ_mill.hal  Pokeys57E_DM542_XXYZ_mill.ini  Pokeys57E_DM542_XXYZ_mill.md  Pokeys57E_SimPins.Hal  Pokeys57E_SimPins.hal  Pokeys57U_DM542_XXYZ_mill.ini  Pokeys_DM542_XXYZ_mill.hal  README  kbd48CNC.hal  pokeys_homing.hal  pokeys_homing.md  postgui_call_list.hal  shutdown.hal
GladeVCP/: Handler.py  pokeys_axis_widget_template.glade
PM2700/: PM2700.ini  xhc-whb04b-6.hal
PM2700/hallib/: PM2700.hal  PM2700_postgui.hal  Pokeys57E_PM2700.hal  pokeys_homing.hal  postgui_call_list.hal
Pokeys57CNC_DM542_XXYZ_mill/: Pokeys57CNC_DM542_XXYZ_mill.hal  Pokeys57CNC_DM542_XXYZ_mill.ini  postgui_call_list.hal
Pokeys57E_DM542_XXYZ_mill/: Pokeys57E_DM542_XXYZ_mill.hal  Pokeys57E_DM542_XXYZ_mill.ini  postgui_call_list.hal
code_analysis/: C2Dox.py  Doxyfile  custom_doxygen.css  hal2dot-smart.sh  halfile2dot.sh
debian/: control
docs/: README.md  UPDATE_RUNNER.md  user_guide.md
docs/wiki/: Advanced_Topics.md  Compatibility.md  Converting_HAL_and_INI_Files.md  Feature_Requests.md  (+13 more)
include/: PoKeysLib.h  PoKeysLibCore.h
pokeys_py/: __init__.py  __main__.py  analog_io.py  can_bus.py  counter.py  digital_io.py  pev2_motion_control.py  ponet.py  porelay8.py  pwm.py  settings.py  telemetry.py  ui_setup_tool.py
pokeys_rt/: Makefile.noqmake.rt  Makefile.pokeys_rt.in  PoKeysLib.h  PoKeysLib1Wire.c  PoKeysLibCAN.c  PoKeysLibCore.c  PoKeysLibCore.h  PoKeysLibCoreSockets.c  PoKeysLibCoreSockets.h  PoKeysLibDeviceData.c  PoKeysLibDevicePoKeys57Industrial.c  PoKeysLibDevicePoKeys57Industrial.h  PoKeysLibEncoders.c  PoKeysLibI2C.c  PoKeysLibIO.c  PoKeysLibMatrixKB.c  PoKeysLibPoIL.c  PoKeysLibPoNET.c  PoKeysLibPoRelay8.c  PoKeysLibPulseEngine_v2.c  PoKeysLibRt.h  PoKeysLibSPI.c  PoKeysLib_global.h  hid-libusb.c  hid-mac.c  hid.c  hidapi.h  homing_statemachines.c  pokeye_homing.dox  pokeys.comp  pokeys_homecomp.c  pokeys_homecomp.comp  pokeys_homecomp_statemachines.c  pokeys_rt.c  pokeys_rt.comp  subMakefile
pokeys_userspace/: PoKeysComp.h  PoKeysCompEncoders.c  pokeys_analog_io.comp  pokeys_counters.comp  pokeys_digital_io.comp  pokeys_pev2.comp  pokeys_poextbus.comp  pokeys_ponetkbd48cnc.comp  pokeys_porelay8.comp  pokeys_pwm.comp
pokeys_uspace/: DebugMakefile  PoKeysComp.h  PoKeysCompEncoders.c  PoKeysCompIO.c  PoKeysCompPoExtBus.c  PoKeysCompPoNet.c  PoKeysCompPulseEngine_v2.c  PokeysCompPulsEngine_base.c  Submakefile  pokeys.c  pokeys.comp  pokeys_ini.c  pokeys_ini.h
scripts/: README.md  setup_environment.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  (+175 more)
tests/: linuxcnc_config.hal  test_analog_io.py  test_can_bus.py  test_counter.cpp  test_counter.py  test_digital_io.py  test_digital_io_inversion.py  test_functional.py  test_integration.py  test_performance.py  test_peripheral_devices.py  test_pev2_motion_control.py  test_ponet.py  test_porelay8.py  test_pwm.py  test_ui_setup_tool.py
(+22 files in other folders)
